@@ -1,17 +1,14 @@
 
 EXTRA_DIST = \
 	android-build.sh \
-	android-arm.sh \
+	android-aar.sh \
 	android-armv7-a.sh \
 	android-armv8-a.sh \
-	android-mips32.sh \
-	android-mips64.sh \
 	android-x86.sh \
 	android-x86_64.sh \
 	emscripten.sh \
-	ios.sh \
 	apple-xcframework.sh \
+	macos.sh \
 	msys2-win32.sh \
 	msys2-win64.sh \
-	watchos.sh \
 	wasm32-wasi.sh
